# server/api/server.gen.go
@@ -22,17 +22,6 @@ type DateTimeResponse struct {
 // GetEventApplicantsResponse defines model for GetEventApplicantsResponse.
 type GetEventApplicantsResponse = []Applicant
 
-// GetEventMyApplicant defines model for GetEventMyApplicant.
-type GetEventMyApplicant struct {
-	Date        *DateTimeResponse   `json:"date,omitempty"`
-	Description *string             `json:"description,omitempty"`
-	Id          *openapi_types.UUID `json:"id,omitempty"`
-	Title       *string             `json:"title,omitempty"`
-}
-
-// GetEventMyApplicantsResponse defines model for GetEventMyApplicantsResponse.
-type GetEventMyApplicantsResponse = []GetEventMyApplicant
-
 // GetEventParticipantsResponse defines model for GetEventParticipantsResponse.
 type GetEventParticipantsResponse = []string
 
@@ -53,6 +42,17 @@ type GetEventTargetsResponse = []string
 type GetMeResponse struct {
 	TraQID *string `json:"traQID,omitempty"`
 }
+
+// GetMyParticipateEvent defines model for GetMyParticipateEvent.
+type GetMyParticipateEvent struct {
+	Date        DateTimeResponse   `json:"date"`
+	Description string             `json:"description"`
+	Id          openapi_types.UUID `json:"id"`
+	Title       string             `json:"title"`
+}
+
+// GetMyParticipateEventsResponse defines model for GetMyParticipateEventsResponse.
+type GetMyParticipateEventsResponse = []GetMyParticipateEvent
 
 // GetTraQGroupsResponse defines model for GetTraQGroupsResponse.
 type GetTraQGroupsResponse = []TraQGroup
@@ -130,8 +130,8 @@ type ServerInterface interface {
 	// (POST /events)
 	PostEvents(ctx echo.Context) error
 
-	// (GET /events/me/applicant)
-	GetEventsMeApplicant(ctx echo.Context) error
+	// (GET /events/me/participate)
+	GetEventsMeParticipate(ctx echo.Context) error
 
 	// (GET /events/{eventID})
 	GetEventsEventID(ctx echo.Context, eventID EventID) error
@@ -178,12 +178,12 @@ func (w *ServerInterfaceWrapper) PostEvents(ctx echo.Context) error {
 	return err
 }
 
-// GetEventsMeApplicant converts echo context to params.
-func (w *ServerInterfaceWrapper) GetEventsMeApplicant(ctx echo.Context) error {
+// GetEventsMeParticipate converts echo context to params.
+func (w *ServerInterfaceWrapper) GetEventsMeParticipate(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.GetEventsMeApplicant(ctx)
+	err = w.Handler.GetEventsMeParticipate(ctx)
 	return err
 }
 
@@ -348,7 +348,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.POST(baseURL+"/events", wrapper.PostEvents)
-	router.GET(baseURL+"/events/me/applicant", wrapper.GetEventsMeApplicant)
+	router.GET(baseURL+"/events/me/participate", wrapper.GetEventsMeParticipate)
 	router.GET(baseURL+"/events/:eventID", wrapper.GetEventsEventID)
 	router.GET(baseURL+"/events/:eventID/applicants", wrapper.GetEventsEventIDApplicants)
 	router.POST(baseURL+"/events/:eventID/applicants", wrapper.PostEventsEventIDApplicants)
